k8s/04.-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: amael-ia  # <-- CORREGIDO
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets: []
      containers:
      - name: backend-container
        image: registry.richardx.dev/backend-ia:2.16.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        volumeMounts:
        - name: legacy-history
          mountPath: /chat_histories
      volumes:
        - name: legacy-history
          persistentVolumeClaim:
            claimName: chroma-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: amael-ia
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
