k8s/17.-k8s-llm-adapter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-adapter
  namespace: amael-ia # O el namespace que uses
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llm-adapter
  template:
    metadata:
      labels:
        app: llm-adapter
    spec:
      containers:
      - name: adapter
        image: registry.richardx.dev/llm-adapter:1.0.2
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: llm-adapter-service
  namespace: amael-ia
spec:
  selector:
    app: llm-adapter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
