k8s/19.-k8s-agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-agent-deployment
  namespace: amael-ia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-agent
  template:
    metadata:
      labels:
        app: k8s-agent
    spec:
      serviceAccountName: k8s-agent-sa
      containers:
      - name: k8s-agent
        image: registry.richardx.dev/k8s-agent:1.0.5
        imagePullPolicy: Always
        ports:
        - containerPort: 8002
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-agent-service
  namespace: amael-ia
spec:
  selector:
    app: k8s-agent
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
