k8s/25.-TTS-services-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amael-tts-service
  namespace: amael-ia
spec:
  selector:
    app: amael-tts
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
