k8s/27.-frontend-next-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-next-deployment
  namespace: amael-ia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-next
  template:
    metadata:
      labels:
        app: frontend-next
    spec:
      imagePullSecrets: []
      containers:
      - name: frontend-next-container
        image: registry.richardx.dev/frontend-next:1.3.2
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-next-service
  namespace: amael-ia
spec:
  selector:
    app: frontend-next
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
